# Prueba-Tecnica-Eventos

./: .gitignore  Readme  docker-compose.yml
backend/: .coverage  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: cf820500d23a_init_schema.py
backend/app/: __init__.py  main.py
backend/app/core/: auth.py  config.py  database.py
backend/app/models/: associations.py  eventos.py  sesiones.py  shared.py  usuarios.py
backend/app/routes/: auth.py  eventos.py  sesiones.py
backend/app/schemas/: eventos.py  sesiones.py  usuarios.py
backend/app/services/: auth.py  eventos.py  sesiones.py
backend/htmlcov/: class_index.html  function_index.html  index.html  status.json  z_5f5a17c013354698___init___py.html  z_5f5a17c013354698_main_py.html  z_6c0e4b930745278b_associations_py.html  z_6c0e4b930745278b_eventos_py.html  z_6c0e4b930745278b_sesiones_py.html  z_6c0e4b930745278b_shared_py.html  z_6c0e4b930745278b_usuarios_py.html  z_8f7e1016f2d37417_auth_py.html  z_8f7e1016f2d37417_config_py.html  z_c0f67d75e686303c_eventos_py.html  z_c0f67d75e686303c_sesiones_py.html  z_c0f67d75e686303c_usuarios_py.html  z_c318f3fa19a49f69_auth_py.html  z_c318f3fa19a49f69_eventos_py.html  z_c318f3fa19a49f69_sesiones_py.html
backend/tests/: conftest.py  test_auth.py  test_eventos.py  test_sesiones.py  test_token.py
frontend/eventos-app/: Dockerfile  README.md  package-lock.json  package.json  vite.config.js
frontend/eventos-app/coverage/: coverage-final.json  index.html
frontend/eventos-app/src/: App.vue  main.js
(+65 files in other folders)
